2000-12-19  Michael Yount <csf@moscow.com>

	* bin/mj_confirm:  Rewrite to use format files, have instructions,
	and be easier to navigate.

	* lib/Mj/Format.pm:  (who) Use hard-coded formatting for the
	plain who command for better speed.  The who-enhanced and who-bounces
	commands will be 5 to 10 times slower for large lists due to the 
	formatting substitutions.

	* lib/Mj/List.pm:  (_make_fs)  Cease using the filedir setting.

2000-12-17  Michael Yount <csf@moscow.com>

	* lib/Mj/Parser: (parse_part)  Inform about "parse" failure if
	no valid commands were found.

2000-12-16  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (standard_subs) Add CONFIRM_URL, WWWADM_URL
	and WWWUSR_URL variables to the standard substitutions.  These
	give the values from the GLOBAL configuration settings of the
	same names (wwwadm_url and wwwusr_url are new settings).
	(help_start)  Use "help overview" as the default help page;
	"help help" instead displays a summary of the help command.
	(_faq, _info, _intro)  Allow LASTCHANGE substitution to be used
	to supply the date on which the document was last modified.

2000-12-13  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/BounceHandler.pm (handle_bounce_user): Actually call
	handle_bounce_removal to delete users.
	(handle_bounce_removal): Delete users only when -noprobe is
	specified.

	* lib/Mj/Config.pm (parse_access_rules, parse_bounce_rules):
	Accept '-' separating actions from modes in addition to '='.

2000-12-12  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/mj_cf_defs.pl: Now that reply_do and subject_prefix default
	to nonempty values, default_flags should not include replyto or
	prefix.

	* lib/Mj/BounceHandler.pm (handle_bounce_removal): New function:
	handle deleting of users or constructing tokens to do so.

2000-12-11  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Majordomo.pm (trigger): Expire additional bounce data as
	well.
