@@ -246,6 +246,14 @@ files/en/farewell
 files/en/file_not_found
 files/en/file_sent
 files/en/format/text/accept
+files/en/format/text/archive_error
+files/en/format/text/archive_foot
+files/en/format/text/archive_get_foot
+files/en/format/text/archive_get_head
+files/en/format/text/archive_head
+files/en/format/text/archive_index
+files/en/format/text/archive_none
+files/en/format/text/archive_stats
 files/en/format/text/configshow
 files/en/format/text/configshow_array
 files/en/format/text/configshow_categories
@@ -282,6 +290,14 @@ files/en/format/text/who_error
 files/en/format/text/who_foot
 files/en/format/text/who_head
 files/en/format/wwwadm/accept
+files/en/format/wwwadm/archive_error
+files/en/format/wwwadm/archive_foot
+files/en/format/wwwadm/archive_get_foot
+files/en/format/wwwadm/archive_get_head
+files/en/format/wwwadm/archive_head
+files/en/format/wwwadm/archive_index
+files/en/format/wwwadm/archive_none
+files/en/format/wwwadm/archive_stats
 files/en/format/wwwadm/command
 files/en/format/wwwadm/configshow
 files/en/format/wwwadm/configshow_array
