@@ -1,0 +1,2 @@
+No messages were retrieved from the archive for the $LIST list.
+$ERROR
