@@ -1,0 +1,2 @@
+
+Messages Found: $TOTAL_POSTS
