@@ -1,0 +1,3 @@
+$MSGNO:-16 : $SUBJECT:-40       
+$DATE : by $FROM:-50 $SIZE
+
