@@ -1,0 +1,6 @@
+Posted Message Statistics for the $LIST list
+    from $START to $FINISH
+
+$POSTS:5 by $AUTHORS
+
+$TOTAL_POSTS:5 total messages
