@@ -1,0 +1,5 @@
+<!-- Majordomo archive_error format file -->
+<p>
+No messages were retrieved from the archive for the $LIST list.
+<p>
+$ERROR
