@@ -1,0 +1,6 @@
+<!-- Majordomo archive_foot format file -->
+</table>
+Messages Found: $TOTAL_POSTS
+<p>
+The subject of each message is a link to the contents of the message.
+
