@@ -1,0 +1,2 @@
+<!-- Majordomo archive_get_foot format file -->
+</pre>
