@@ -1,0 +1,6 @@
+<!-- Majordomo archive_head format file -->
+
+<h4 align=center>$LIST mailing list archives</h4>
+
+<table border>
+<tr><th>Subject<th>Author<th>Date and Size<th>Message Number
