@@ -1,0 +1,7 @@
+<!-- Majordomo archive_index format file -->
+  <tr>
+    <td><a href="$CGIURL?$CGIDATA&list=$LIST&func=archive-get&extra=$MSGNO">
+        $SUBJECT</a>
+    <td>$FROM
+    <td>$DATE $SIZE
+    <td>$MSGNO
