@@ -1,0 +1,3 @@
+<!-- Majordomo archive_none format file -->
+<p>
+No matching messages were found in the archive for the $LIST list.
