@@ -1,0 +1,8 @@
+<!-- Majordomo archive_stats format file -->
+<h3 align=center>Posted Message Statistics for the $LIST list</h3>
+<table>
+  <tr><td colspan=2>from $START to $FINISH
+  <tr><th>Posts<th>Message Authors
+  <tr><td>$POSTS:5<td>$AUTHORS
+  <tr><td>$TOTAL_POSTS:5<td>Total
+</table>
